   available on all workers on a shared file system, e.g. plan(batchtools_nnn,
   registry = list(work.dir = "~")).

 * It is possible to control if and how batchtools should use file compressions
   for exported globals and results by specifying batchtools registry parameter
   'compress'.  For example, to turn of file compression, use
   plan(batchtools_nnn, registry = list(compress = FALSE)).

DOCUMENTATION:

 * Add help("future.batchtools.options") which descriptions R options and
   environment variables used specifically by the future.batchtools package.
   

Version: 0.8.1 [2019-09-30]

BUG FIXES:

 * print() for BatchtoolsFuture would produce an error if the underlying
   batchtools Registry was incomplete.


Version: 0.8.0 [2019-05-04]

NEW FEATURES:

 * Setting option 'future.delete' to FALSE will now prevent removal of the
   batchtools registry folders.

 * When a batchtools job expires, for instance when the scheduler terminates
   it because the job was running out of its allocated resources, then a
   BatchtoolsFutureError is produced which by default outputs the tail of the
   output logged by batchtools.  The default number of lines displayed from
   the end is now increased from six to 48 - a number which now can be set
   via option 'future.batchtools.expiration.tail'.
   
 * Now a more informative error message is produced if a batchtools *.tmpl
   template file was not found.

 * Debug messages are now prepended with a timestamp.

BUG FIXES:

 * Argument 'workers' could not be a function.

 * Argument 'workers' of type character was silently accepted and effectively
   interpreted as workers = length(workers).


Version: 0.7.2 [2018-12-03]

DOCUMENTATION:

 * Add a simple example(future_custom).

FIXES:

 * Made internal code agile to upcoming changes in the future package on
   how a captured error is represented.

SOFTWARE QUALITY:

 * FYI: Every release is tested against one Torque/PBS and one SGE scheduler.
 
BUG FIXES:
