@@ -2,7 +2,7 @@
 % Please edit documentation in R/options.R
 \name{future.batchtools.options}
 \alias{future.batchtools.options}
-\alias{future.cmdargs}
+\alias{future.cache.path}
 \alias{future.batchtools.expiration.tail}
 \alias{future.batchtools.output}
 \alias{future.batchtools.workers}
@@ -39,7 +39,8 @@ relayed by batchtools futures to help troubleshooting.
 This option controls how many lines are displayed.
 (Default: \code{48L})}
 
-\item{\env{R_FUTURE_CACHE_PATH}}{(character string)
+\item{\option{future.cache.path} / \env{R_FUTURE_CACHE_PATH}}{
+(character string)
 An absolute or relative path specifying the root folder in which
 \pkg{batchtools} registry folders are stored.
 (Default: \code{.future})}
